Added stools and fixed the hitbox for the tables, removed pale oak stuffs, finally finished the wools